# madousho.ai

./: .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pypi-publish.yml  pypi-test-publish.yml
.sisyphus/drafts/: flow-plugin-loader.md  sync-api-decision.md  task-system-design.md  version-verification.md
.sisyphus/plans/: admin-layout-framework.md  api-auth-middleware.md  api-scaffold.md  cli-entrypoint.md  config-system.md  database-manager.md  dual-theme-system.md  fix-config-tests.md  flow-crud.md  flow-plugin-loader.md  flows-page.md  flows-view-filters.md  frontend-i18n.md  frontend-scaffolding.md  http-api-init.md  login-page.md  login-theme-adapter.md  loguru-logger-implementation.md  loguru-logging.md  madousho-architecture.md  pypi-publish.md  python-init-config-loader.md  serve-command.md  serve-db-init.md  sqlite-wal-config.md  task-system.md  typer-cli-init.md  version-fix.md
alembic/: AGENTS.md  env.py
alembic/versions/: 91b3f4ede6ab_create_flows_and_tasks_tables.py  99b2044634b6_add_status_and_flow_template_to_flows.py
config/: madousho.example.yaml  madousho.mock.yml
examples/example_flows/: AGENTS.md  config.typehint.yaml  config.yaml  pyproject.toml
examples/example_flows/src/: __init__.py  main.py
examples/example_flows/src/tasks/: __init__.py  fetch.py  search.py  summarize.py
frontend/: .gitignore  AGENTS.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  i18n.ts  main.ts
logs/: app.json
src/madousho/: AGENTS.md  __init__.py  __main__.py  _version.py  cli.py  logger.py
tests/: AGENTS.md  conftest.py  test_cli.py  test_config.py  test_database.py  test_enums.py  test_flow_model.py  test_global_options.py  test_serve_command.py  test_verify_command.py
tests/api/: AGENTS.md  __init__.py  test_app.py  test_auth.py  test_flow_crud.py  test_health.py  test_integration.py  test_middleware.py  test_routes.py
tests/config/: test_integration.py  test_loader.py  test_models.py  test_typehint_models.py
tests/flow/: test_base.py  test_loader.py  (+7 more)
(+141 files in other folders)
