[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "madousho"
version = "0.1.0"
description = "Systematic Agent I guess"
requires-python = ">=3.14"

dependencies = [
    "typer>=0.9.0,<1.0.0"
]
[project.scripts]
madousho = "madousho.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config"
]